// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideGrid /> by default matches with snapshot 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c2 .k-Grid__col {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
}

.c2 .k-Grid__col-- {
  -webkit-flex-basis: calc((100% / 12) * );
  -ms-flex-preferred-size: calc((100% / 12) * );
  flex-basis: calc((100% / 12) * );
  max-width: calc((100% / 12) * );
}

.c2 .k-Grid__col--offset- {
  margin-left: calc((100% / 12) * );
}

.c1 {
  margin-left: auto;
  margin-right: auto;
  box-sizing: border-box;
  max-width: 90rem;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.c0 .k-SideGrid__content {
  background-color: #fff;
  padding-bottom: 1.875rem;
}

.c0 .k-SideGrid__aside {
  display: none;
}

.c0 .k-SideGrid__asideContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  border-left: 0.0625rem solid #eee;
  background-color: #fbfbfb;
}

.c0.k-SideGrid--aside-start .k-SideGrid__row {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0.k-SideGrid--aside-start .k-SideGrid__aside {
  border-left: none;
  border-right: 0.625rem solid #fff;
  padding-left: 0.625rem;
  padding-right: 0;
}

.c0.k-SideGrid--aside-start .k-SideGrid__asideContent {
  border-left: none;
  border-right: 0.0625rem solid #eee;
}

@media (min-width:25rem) {
  .c2 .k-Grid__col--[object Array Iterator]-xs {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-xs {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:40rem) {
  .c2 .k-Grid__col--[object Array Iterator]-s {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-s {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:48rem) {
  .c2 .k-Grid__col--[object Array Iterator]-m {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-m {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:67.5rem) {
  .c2 .k-Grid__col--[object Array Iterator]-l {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-l {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:90rem) {
  .c2 .k-Grid__col--[object Array Iterator]-xl {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-xl {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:640px) {
  .c1 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }
}

@media (min-width:48rem) {
  .c0 {
    background: linear-gradient( to right,#fff 0%,#fff 50%,#fbfbfb 50%,#fbfbfb 100% );
  }
}

@media (min-width:48rem) {
  .c0 .k-SideGrid__content {
    padding-bottom: 3.125rem;
  }
}

@media (min-width:48rem) {
  .c0 .k-SideGrid__aside {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-left: 0.625rem solid #fff;
    padding-left: 0;
    padding-right: 0.625rem;
  }
}

@media (min-width:48rem) {
  .c0.k-SideGrid--aside-start {
    background: linear-gradient( to left,#fff 0%,#fff 50%,#fbfbfb 50%,#fbfbfb 100% );
  }
}

<div
  className="c0 k-SideGrid customClassName k-SideGrid--aside-end k-SideGrid--aside-default"
>
  <div
    className="c1 k-SideGrid__container"
  >
    <div
      className="c2 k-Grid k-SideGrid__row"
    >
      Foobar
    </div>
  </div>
</div>
`;

exports[`<SideGrid /> with all components matches with snapshot 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c2 .k-Grid__col {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
}

.c2 .k-Grid__col-- {
  -webkit-flex-basis: calc((100% / 12) * );
  -ms-flex-preferred-size: calc((100% / 12) * );
  flex-basis: calc((100% / 12) * );
  max-width: calc((100% / 12) * );
}

.c2 .k-Grid__col--offset- {
  margin-left: calc((100% / 12) * );
}

.c1 {
  margin-left: auto;
  margin-right: auto;
  box-sizing: border-box;
  max-width: 90rem;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.c0 .k-SideGrid__content {
  background-color: #fff;
  padding-bottom: 1.875rem;
}

.c0 .k-SideGrid__aside {
  display: none;
}

.c0 .k-SideGrid__asideContent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  border-left: 0.0625rem solid #eee;
  background-color: #fbfbfb;
}

.c0.k-SideGrid--aside-start .k-SideGrid__row {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0.k-SideGrid--aside-start .k-SideGrid__aside {
  border-left: none;
  border-right: 0.625rem solid #fff;
  padding-left: 0.625rem;
  padding-right: 0;
}

.c0.k-SideGrid--aside-start .k-SideGrid__asideContent {
  border-left: none;
  border-right: 0.0625rem solid #eee;
}

@media (min-width:25rem) {
  .c2 .k-Grid__col--[object Array Iterator]-xs {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-xs {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:40rem) {
  .c2 .k-Grid__col--[object Array Iterator]-s {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-s {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:48rem) {
  .c2 .k-Grid__col--[object Array Iterator]-m {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-m {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:67.5rem) {
  .c2 .k-Grid__col--[object Array Iterator]-l {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-l {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:90rem) {
  .c2 .k-Grid__col--[object Array Iterator]-xl {
    -webkit-flex-basis: calc((100% / 12) * );
    -ms-flex-preferred-size: calc((100% / 12) * );
    flex-basis: calc((100% / 12) * );
    max-width: calc((100% / 12) * );
  }

  .c2 .k-Grid__col--offset-[object Array Iterator]-xl {
    margin-left: calc((100% / 12) * );
  }
}

@media (min-width:640px) {
  .c1 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }
}

@media (min-width:48rem) {
  .c0 {
    background: linear-gradient( to right,#fff 0%,#fff 50%,#fbfbfb 50%,#fbfbfb 100% );
  }
}

@media (min-width:48rem) {
  .c0 .k-SideGrid__content {
    padding-bottom: 3.125rem;
  }
}

@media (min-width:48rem) {
  .c0 .k-SideGrid__aside {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-left: 0.625rem solid #fff;
    padding-left: 0;
    padding-right: 0.625rem;
  }
}

@media (min-width:48rem) {
  .c0.k-SideGrid--aside-start {
    background: linear-gradient( to left,#fff 0%,#fff 50%,#fbfbfb 50%,#fbfbfb 100% );
  }
}

<div
  className="c0 k-SideGrid customClassName k-SideGrid--aside-start k-SideGrid--aside-big"
>
  <div
    className="c1 k-SideGrid__container customClassName"
  >
    <div
      className="c2 k-Grid k-SideGrid__row customClassName"
    >
      <div
        className="k-Grid__col k-Grid__col--12 k-Grid__col--8-m k-SideGrid__content customClassName"
      >
        Main content test text
      </div>
      <div
        className="k-Grid__col k-Grid__col--12 k-Grid__col--4-m k-SideGrid__aside customClassName"
      >
        <div
          className="k-SideGrid__asideContent customClassName"
        >
          Aside test text
        </div>
      </div>
    </div>
  </div>
</div>
`;
